# ros2_ws

./: .gitignore  README.md  camera_follower_tree.txt  frames_2026-01-30_18.10.22.gv  frames_2026-01-31_19.48.16.gv  frames_2026-02-01_12.35.48.gv  navigation_metrics_20260131_234603.csv  navigation_metrics_20260204_104456.csv  navigation_metrics_20260204_105708.csv  navigation_metrics_20260204_114832.csv  navigation_metrics_20260204_130318.csv  navigation_metrics_20260204_134546.csv  navigation_metrics_20260204_140611.csv  navigation_metrics_20260204_141723.csv  navigation_metrics_20260204_173914.csv  navigation_summary_20260204_105708.csv  navigation_summary_20260204_134546.csv  navigation_summary_20260204_141723.csv
Replace/: Robotics Project Proposal.docx  setup.py
Replace/config/: gazebo_bridge.yaml  nav2_params.yaml  slam_params.yaml
Replace/launch/: nav2_simulation.launch.py
Replace/my_robot_bringup/worlds/: test_world.sdf
Replace/worlds/: test_world.sdf
camera_follower/: .gitignore
camera_follower/my_robot_bringup/config/: gazebo_bridge.yaml
camera_follower/my_robot_description/urdf/: camera.xacro  lidar.xacro  my_robot.urdf.xacro
install/: local_setup.sh  setup.sh
install/my_cpp_pkg/lib/my_cpp_pkg/: cpp_node
install/my_cpp_pkg/share/my_cpp_pkg/: package.sh
install/my_py_pkg/share/my_py_pkg/: package.sh  package.xml
install/my_robot_bringup/share/my_robot_bringup/: package.sh  package.xml
install/my_robot_control/lib/my_robot_control/: camera_follower  dynamic_obstacles
install/my_robot_control/share/my_robot_control/: package.sh
install/my_robot_description/share/my_robot_description/: package.sh
log/: latest_build
my_robot_bringup_backup/: CMakeLists.txt
my_robot_bringup_backup/launch/: gazebo.launch.xml
my_robot_bringup_backup/my_robot_description/urdf/: mobile_base_gazebo.xacro
src/log/: latest_list
src/my_cpp_pkg/: CMakeLists.txt  package.xml
src/my_cpp_pkg/src/: my_first_node.cpp
src/my_py_pkg/: setup.py
src/my_py_pkg/my_py_pkg/: my_first_node.py  robot_news_station.py  simple_publisher.py  smart_phone.py
src/my_py_pkg/my_py_pkg/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/my_robot_bringup/: CMakeLists.txt  package.xml
src/my_robot_bringup/config/: gazebo_bridge.yaml  nav2_params.yaml  nav2_rviz.rviz  slam_rviz.rviz  slam_toolbox.yaml
src/my_robot_bringup/launch/: my_robot_gazebo.launch.xml  navigation.launch.xml  slam.launch.xml
src/my_robot_bringup/log/: latest_list
src/my_robot_bringup/maps/: test_world.pgm  test_world.yaml  test_world_backup.pgm  test_world_backup.yaml  test_world_cleaned.pgm  test_world_cleaned.yaml
src/my_robot_bringup/scripts/: camera_pointcloud_processor.py  dynamic_obstacles.py  metrics_collector.py  navigation_fsm.py  odom_to_tf.py  scan_timestamp_fixer.py  slam_activator.py  tf_republisher.py
src/my_robot_bringup/test/: test_metrics_collector.py  test_navigation_fsm.py  test_ros_integration.py
src/my_robot_bringup/urdf/: common_properties.xacro  lidar.xacro  mobile_base.xacro  mobile_base_gazebo.xacro  my_robot.urdf.xacro
src/my_robot_control/: package.xml
src/my_robot_description/: CMakeLists.txt
src/my_robot_description/install/: local_setup.sh  setup.sh
src/my_robot_description/log/: latest_build
src/my_robot_description/rviz/: nav2_config.rviz  urdf_config.rviz
src/my_robot_description/urdf/: camera.xacro
(+11 files in other folders)
